Added the capability of importing new xml files

--- a/kstars/skyguides/CMakeLists.txt
+++ b/kstars/skyguides/CMakeLists.txt
@@ -1,6 +1,5 @@
 #install_files
 
 
-install( FILES sgpanel.qml
-
-         DESTINATION  ${DATA_INSTALL_DIR}/kstars/skyguides/ )
+install( FILES sgpanel1.qml
+         DESTINATION  ${DATA_INSTALL_DIR}/kstars/skyguides )
