--- a/kstars/CMakeLists.txt
+++ b/kstars/CMakeLists.txt
@@ -405,7 +405,6 @@ set(printingui_SRCS
     printing/pwizwelcome.ui
 )
 
-
 set(astrobinapi_SRCS
     services/astrobin/astrobinapi.cpp
     services/astrobin/astrobinapixml.cpp
@@ -419,13 +418,18 @@ if( QJSON_FOUND )
     )
 endif( QJSON_FOUND )
 
+set(services_SRCS
+    ${astrobinapi_SRCS}
+    services/dss.cpp
+    services/sdss.cpp
+)
 
 ##set(kstars_SRCS ${indi_SRCS} ${ekos_SRCS} ${fits_SRCS}
 set(kstars_SRCS ${indi_SRCS} ${fits_SRCS} ${ekos_SRCS}
 	${libkstarswidgets_SRCS} ${libkstarscomponents_SRCS} ${libkstarstools_SRCS} 
 	${kstars_extra_SRCS}  ${kstars_gl_SRCS} ${kstars_projection_SRCS} ${xplanet_SRCS}
 	${kstars_options_SRCS} ${kstars_skyobjects_SRCS} ${kstars_dialogs_SRCS} ${oal_SRCS}
-        ${printing_SRCS} ${astrobinapi_SRCS}
+        ${printing_SRCS} ${services_SRCS}
 )
 
 qt4_add_dbus_adaptor(kstars_SRCS org.kde.kstars.xml kstars.h KStars)
