Add option page for api.

--- a/kstars/CMakeLists.txt
+++ b/kstars/CMakeLists.txt
@@ -283,6 +283,7 @@ set(kstars_options_SRCS
   options/opssolarsystem.cpp
   options/opssatellites.cpp
   options/opssupernovae.cpp
+  options/opsastrobinapi.cpp
 )
 
 set(kstars_optionsui_SRCS
@@ -293,6 +294,7 @@ set(kstars_optionsui_SRCS
   options/opssolarsystem.ui
   options/opssatellites.ui
   options/opssupernovae.ui
+  options/opsastrobinapi.ui
 )
 
 set(kstars_skyobjects_SRCS
