--- a/kstars/data/CMakeLists.txt
+++ b/kstars/data/CMakeLists.txt
@@ -6,6 +6,7 @@ install( FILES kstars.png geomap.png
     starnames.dat namedstars.dat unnamedstars.dat
     starlnum.idx
     ngcic.dat
+    NGCIC2012.csv
     clines.dat
     cnames.dat
     milkyway.dat
