Move the functions associated with the LSR velocity calc.
These functions are only used by the calcvlsr module, so
I've seperated them out into their own module, called
KSEngine::OldVLSR.

--- a/kstars/CMakeLists.txt
+++ b/kstars/CMakeLists.txt
@@ -375,6 +375,7 @@ set(kstars_projection_SRCS
 
 set(kstars_engine_SRCS
     engine/oldpointfunctions.cpp
+    engine/oldvlsr.cpp
 )
 
 set(kstars_extra_SRCS
