--- a/kstars/CMakeLists.txt
+++ b/kstars/CMakeLists.txt
@@ -376,6 +376,7 @@ set(kstars_projection_SRCS
 set(kstars_engine_SRCS
     engine/oldpointfunctions.cpp
     engine/oldvlsr.cpp
+    engine/oldrefraction.cpp
 )
 
 set(kstars_extra_SRCS
