Put precession functions in their own namespace.
Also, use the KSEngine namespace to shorten some code.

--- a/kstars/CMakeLists.txt
+++ b/kstars/CMakeLists.txt
@@ -377,6 +377,7 @@ set(kstars_engine_SRCS
     engine/oldpointfunctions.cpp
     engine/oldvlsr.cpp
     engine/oldrefraction.cpp
+    engine/oldprecession.cpp
 )
 
 set(kstars_extra_SRCS
