Add conversion functions between quaternions and spherical coords.

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_subdirectory(engine)
 include_directories( ${kstars_SOURCE_DIR} )
 # QT4_AUTOMOC( ${kstars_SRCS} )
 # add_library( KStarsAll SHARED ${kstars_extra_SRCS})
