--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,10 @@ find_package(KDE4   REQUIRED)
 include(KDE4Defaults)
 include_directories (${CMAKE_SOURCE_DIR}
                      ${CMAKE_BINARY_DIR}
+                     ${EIGEN_INCLUDE_DIRS}
                      ${KDE4_INCLUDES}
                      ${QT4_INCLUDES})
+add_definitions(${EIGEN_DEFINITIONS})
 
 # some configure checks needed for kstars
 include(CheckIncludeFiles)
