Try to move some of the nutation calculations from KSNumbers.
This implementation doesn't give the same result as of yet, but
it's not obvious (to me) why. It's also
not clear what the difference between the two obliquity calculations
in KSNumbers is, but it's quite large and I presume important. The ported
code follows Meeus, chapter 20.

If anyone wants to take a brief look and see whether I've made
an obvious mistake, it'd be appreciated.

CCMAIL: akarshsimha@gmail.com
CCMAIL: ra.rishab@gmail.com

--- a/Tests/engine/CMakeLists.txt
+++ b/Tests/engine/CMakeLists.txt
@@ -6,7 +6,7 @@ set( TEST_LIBRARIES
    )
 include_directories( ${kstars_SOURCE_DIR} ${EIGEN2_INCLUDE_DIR} )
 
-set( KSEngineTests_SRCS testconvertcoord.cpp )
+set( KSEngineTests_SRCS testconvertcoord.cpp testastrovars.cpp )
 QT4_AUTOMOC( ${KSEngineTests_SRCS} )
 
 #
@@ -16,3 +16,11 @@ QT4_AUTOMOC( ${KSEngineTests_SRCS} )
 add_executable( testconvertcoord testconvertcoord.cpp )
 target_link_libraries( testconvertcoord ${TEST_LIBRARIES} )
 add_test( NAME ConvertCoordTest COMMAND testconvertcoord )
+
+#
+# Test misc calculations
+#
+
+add_executable( testastrovars testastrovars.cpp )
+target_link_libraries( testastrovars ${TEST_LIBRARIES} )
+add_test( NAME AstroVarsTest COMMAND testastrovars )
