--- a/kstars/CMakeLists.txt
+++ b/kstars/CMakeLists.txt
@@ -495,13 +495,14 @@ kde4_add_library( KStarsLib STATIC ${kstars_SRCS})
 target_link_libraries(KStarsLib
         LibKSDataHandlers
         ${KDE4_KDECORE_LIBS}
-	${KDE4_KNEWSTUFF3_LIBS}
-	${KDE4_KIO_LIBS}
-    ${QT_QTDECLARATIVE_LIBRARY}
-    kdeclarative
-	htmesh
-	${ZLIB_LIBRARIES}
-	${QT_QTSQL_LIBRARY}
+        ${KDE4_KNEWSTUFF3_LIBS}
+        ${KDE4_KIO_LIBS}
+        ${QT_QTDECLARATIVE_LIBRARY}
+        kdeclarative
+        htmesh
+        ${ZLIB_LIBRARIES}
+        ${QT_QTSQL_LIBRARY}
+        ${OPENCL_LIBRARIES}
         )
 # qt4_automoc(kstars.h)
 if(NOT WIN32)
