--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_definitions(--std=c++11 -DCL_USE_DEPRECATED_OPENCL_1_1_APIS)
+add_definitions(--std=c++11)
 PROJECT(kstars CXX C)
 set (KStars_VERSION_MAJOR 2)
 set (KStars_VERSION_MINOR 1)
