--- a/kscl/CMakeLists.txt
+++ b/kscl/CMakeLists.txt
@@ -1,6 +1,7 @@
 #Needed for compilation on some systems, like Debian Wheezy
 add_definitions( -DCL_USE_DEPRECATED_OPENCL_1_1_APIS )
-include_directories( ${OPENCL_INCLUDE_DIRS} )
+include_directories( ${OPENCL_INCLUDE_DIRS}
+                     ${QT4_INCLUDES} )
 
 set(LibKSCl_SRCS
     ksclcontext.cpp
@@ -13,6 +14,7 @@ set(LibKSCl_SRCS
 kde4_add_library(LibKSCl STATIC ${LibKSCl_SRCS})
 target_link_libraries(LibKSCl
                       ${OPENCL_LIBRARIES}
+                      ${QT_QTCORE_LIBRARY}
                       ${KDE4_KDECORE_LIBS} #Needed only for KDebug
                      )
 
