Move all engine tests into one directory.
This reflects the newer organization of the code being tested.

--- a/tests/engine/CMakeLists.txt
+++ b/tests/engine/CMakeLists.txt
@@ -2,12 +2,19 @@ find_package(Qt4 REQUIRED)
 set( TEST_LIBRARIES
     ${QT_LIBRARIES}
     ${QT_QTTEST_LIBRARY}
+    LibKSEngine
     KStarsLib
    )
-include_directories( ${kstars_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR} )
+include_directories( ${kstars_SOURCE_DIR}
+                     ${OPENCL_INCLUDE_DIRS}
+                     ${EIGEN3_INCLUDE_DIR} )
 
-set( KSEngineTests_SRCS testconvertcoord.cpp testastrovars.cpp )
-QT4_AUTOMOC( ${KSEngineTests_SRCS} )
+set( EngineTests_SRCS 
+    testconvertcoord.cpp 
+    testastrovars.cpp 
+    testclconvert.cpp
+    testksclcontext.cpp )
+QT4_AUTOMOC( ${EngineTests_SRCS} )
 
 #
 # Test coordinate conversions
@@ -24,4 +31,20 @@ add_test( NAME ConvertCoordTest COMMAND testconvertcoord )
 add_executable( testastrovars testastrovars.cpp )
 target_link_libraries( testastrovars ${TEST_LIBRARIES} )
 add_test( NAME AstroVarsTest COMMAND testastrovars )
+
+#
+# Test context creation
+#
+
+add_executable( testksclcontext testksclcontext.cpp )
+target_link_libraries( testksclcontext ${TEST_LIBRARIES} )
+add_test( NAME KSClContextTest COMMAND testksclcontext )
+
+#
+# Test using CL to process points
+#
+
+add_executable( testclconvert testclconvert.cpp )
+target_link_libraries( testclconvert ${TEST_LIBRARIES} )
+add_test( NAME ClConvertTest COMMAND testclconvert )
 
