Rename KSCl* classes to just KS*
This is so that it makes sense even if we aren't using OpenCL.

--- a/ksengine/CMakeLists.txt
+++ b/ksengine/CMakeLists.txt
@@ -7,8 +7,8 @@ set(LibKSEngine_SRCS
     dms.cpp
     astrovars.cpp
     convertcoord.cpp
-    ksclcontext.cpp
-    ksclbuffer.cpp
+    kscontext.cpp
+    ksbuffer.cpp
 )
 
 kde4_add_library(LibKSEngine STATIC ${LibKSEngine_SRCS})
