Remove OpenCL code from KSBuffer.
The idea is as follows: we will use the d-pointer of the KSBuffer
and KSContext classes to differentiate between OpenCL and plain CPU
implementations. So we have a KSBufferPrivate class inherited by
KSBufferCL and KSBufferEigen, which provide the implementation.

--- a/ksengine/CMakeLists.txt
+++ b/ksengine/CMakeLists.txt
@@ -9,6 +9,7 @@ set(LibKSEngine_SRCS
     convertcoord.cpp
     kscontext.cpp
     ksbuffer.cpp
+    ksbuffercl.cpp
 )
 
 kde4_add_library(LibKSEngine STATIC ${LibKSEngine_SRCS})
