Split the KSContext class in a similar way to KSBuffer.

--- a/ksengine/CMakeLists.txt
+++ b/ksengine/CMakeLists.txt
@@ -8,6 +8,7 @@ set(LibKSEngine_SRCS
     astrovars.cpp
     convertcoord.cpp
     kscontext.cpp
+    kscontextcl.cpp
     ksbuffer.cpp
     ksbuffercl.cpp
 )
