Fix compile issues created by rearranging the tree
The issue is with the KConfig auto-generated stuff, which
is now in a different place than it was, but I didn't catch
the issue since I didn't run make clean.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,8 @@ macro_log_feature(OPENCL_FOUND "OpenCL"
                                FALSE "" "OpenCL allows KStars to compute sky positions on the GPU with massive parallelism.")
 enable_testing(true)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR}
+                    ${CMAKE_CURRENT_BINARY_DIR}/src/kstars/)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config-kstars.h.cmake
                ${CMAKE_CURRENT_BINARY_DIR}/config-kstars.h )
 
